# hybrid-vector-dbs

./: .gitignore  README.md  legal_text_first_1000.csv  pyproject.toml
data/sample-lancedb/cases_hybrid_search.lance/_indices/fts/: meta.json
data/sample-lancedb/cases_hybrid_search.lance/_transactions/: 0-3349c384-c186-445c-8d69-3fe9f8b919ad.txn  1-63a5689a-045a-4d98-8128-3d29ffcfbaed.txn  2-11c06622-4123-465a-ad59-7f57eb9d9df3.txn  3-25caae6d-5019-4275-a101-ecc4fbe45267.txn
data/sample-lancedb/cases_hybrid_search.lance/_versions/: 1.manifest  2.manifest  3.manifest  4.manifest
data/sample-lancedb/cases_hybrid_search.lance/data/: c83d51d0-9ea5-4617-acea-ca73c7cbd2a1.lance
notebooks/: lancedb.ipynb  pinecone.ipynb  preprocess_data.ipynb  supabase.ipynb  supabase.sql
scripts/: sample_csv.py
src/: embeddings.py
