[project]
name = "hybrid-vector-dbs"
version = "0.1.0"
description = "A project for working with hybrid vector databases"
requires-python = ">=3.11"
dependencies = [
    "chamois>=0.0.1",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "openai>=1.70.0",
    "pinecone-text>=0.10.0",
    "tabulate>=0.9.0",
    "tiktoken>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
